# voiceflousion

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
example/: .env.example  Cargo.toml
example/src/: main.rs
src/: main.rs
src/core/: client_builder.rs  mod.rs  sessions_manager.rs
src/core/session_wrappers/: locked_session.rs  session.rs  session_map.rs
src/core/subtypes/: atomic_timestamp.rs  mod.rs  sent_message.rs
src/core/traits/: client.rs  client_base.rs  responder.rs  sender.rs  update.rs
src/core/voiceflow/: voiceflousion_error.rs  voiceflow_client.rs
src/core/voiceflow/request_structures/: action.rs  mod.rs  voiceflow_request_body.rs
src/integrations/: client.rs  interaction_type.rs  locked_session.rs  mod.rs  session.rs  session_map.rs  update.rs
src/integrations/telegram/: mod.rs  telegram_client.rs  telegram_message.rs  telegram_responder.rs  telegram_sender.rs  telegram_session.rs  telegram_update.rs
src/integrations/utils/: bot_last_message.rs  client_builder.rs  interaction_type.rs  locked_session.rs  mod.rs  sender_http_client.rs  sent_message.rs  session_map.rs  session_wrapper.rs  sessions_manager.rs
src/integrations/utils/subtypes/: mod.rs  (+2 more)
src/utils/: http_client.rs  mod.rs
src/voiceflow/: mod.rs  voiceflousion_error.rs  voiceflow_block.rs  voiceflow_client.rs  voiceflow_error.rs  voiceflow_message.rs  voiceflow_session.rs
src/voiceflow/dialog_blocks/: mod.rs  voiceflow_button.rs  voiceflow_buttons.rs  voiceflow_card.rs  voiceflow_carousel.rs  voiceflow_image.rs  voiceflow_message.rs  voiceflow_text.rs
src/voiceflow/request_structures/: action.rs  action_type.rs  mod.rs  payload.rs  session.rs  state.rs  voiceflow_request_body.rs  voiceflow_request_payload.rs  voiceflow_session.rs
src/voiceflow/response_structures/: mod.rs  voiceflow_response.rs  voiceflow_response_block.rs  voiceflow_response_block_type.rs  voiceflow_response_type.rs
voiceflousion/: Cargo.toml
voiceflousion/src/: lib.rs
voiceflousion/src/core/: client_builder.rs  mod.rs  sessions_manager.rs
voiceflousion/src/core/base_structs/: client_base.rs  clients_manager.rs  mod.rs  responder_base.rs  sender_base.rs  sessions_manager.rs  update_base.rs
voiceflousion/src/core/session_wrappers/: locked_session.rs  mod.rs  session.rs  session_map.rs
voiceflousion/src/core/subtypes/: atomic_timestamp.rs  bot_auth_token.rs  http_client.rs  interaction_type.rs  mod.rs  sent_message.rs
voiceflousion/src/core/traits/: client.rs  client_base.rs  mod.rs  responder.rs  sender.rs  update.rs
voiceflousion/src/core/voiceflow/: mod.rs  voiceflousion_error.rs  voiceflow_block.rs  voiceflow_client.rs  voiceflow_message.rs  voiceflow_session.rs
voiceflousion/src/core/voiceflow/dialog_blocks/: mod.rs  voiceflow_button.rs  voiceflow_buttons.rs  voiceflow_card.rs  voiceflow_carousel.rs  voiceflow_image.rs  voiceflow_text.rs
voiceflousion/src/core/voiceflow/dialog_blocks/enums/: mod.rs  voiceflow_button_action_type.rs  voiceflow_buttons_option.rs
voiceflousion/src/core/voiceflow/dialog_blocks/traits/: from_value.rs
voiceflousion/src/core/voiceflow/request_structures/: action.rs  action_type.rs  payload.rs  state.rs  voiceflow_request_body.rs
voiceflousion/src/core/voiceflow/response_structures/: mod.rs  voiceflow_response.rs  voiceflow_response_block.rs  voiceflow_response_block_processor.rs  voiceflow_response_block_type.rs
voiceflousion/src/errors/: mod.rs  voiceflousion_error.rs
voiceflousion/src/integrations/: mod.rs
voiceflousion/src/integrations/discord/: discord_client.rs  discord_responder.rs  discord_sender.rs  discord_update.rs  mod.rs
voiceflousion/src/integrations/instagram/: instagram_client.rs  instagram_responder.rs  instagram_sender.rs  instagram_update.rs  mod.rs
voiceflousion/src/integrations/instagram/utils/: instagram_serializer.rs  mod.rs
voiceflousion/src/integrations/telegram/: mod.rs  telegram_client.rs  telegram_responder.rs  telegram_sender.rs  telegram_update.rs
voiceflousion/src/integrations/telegram/utils/: mod.rs  telegram_serializer.rs
voiceflousion/src/integrations/utils/: button_callback_data.rs  mod.rs
voiceflousion/src/integrations/whatsapp/: mod.rs  whatsapp_client.rs  whatsapp_responder.rs  whatsapp_sender.rs  whatsapp_serializer.rs  whatsapp_update.rs
voiceflousion/src/integrations/whatsapp/utils/: mod.rs  whatsapp_serializer.rs
voiceflousion/src/server/: endpoints.rs  handlers.rs  mod.rs  voiceflousion_server.rs
voiceflousion/src/server/subtypes/: auth_result.rs  mod.rs  query_params.rs  voiceflousion_headers_wrapper.rs
voiceflousion/src/server/traits/: bot_handler.rs  mod.rs  server_client.rs
voiceflousion/src/server/traits/utils/: mod.rs  verification_functions.rs  verify_functions.rs
voiceflousion/src/webhooks/: handlers.rs  mod.rs  voiceflousion_server.rs
(+23 files in other folders)
