[package]
name = "voiceflousion"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.0", features = ["json"] }
derive_more = "0.99.17"
serde = {version = "1.0.193", features = ["derive"]}
dotenv = "0.15.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
sha2 = "0.10.8"
chrono="0.4.38"
async-trait = "0.1.80"
