[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.193", features = ["derive"]}
dotenv = "0.15.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
voiceflousion = {version = "0.3.0", features = ["all-integrations", "server"]}