[package]
name = "voiceflousion"
version = "0.1.1"
authors = ["Vondert (Ivan Milennyi) <25042018avic@gmail.com>"]
edition = "2021"
description = "A crate that provides toolkit for Voiceflow AI bots integrations and pre-built functionality for quick integration with popular messengers"
license = "MIT"
repository = "https://github.com/Vondert/voiceflousion"
documentation = "https://docs.rs/voiceflousion"
homepage = "https://github.com/Vondert/voiceflousion"
readme = "../README_CARGO.md"

[dependencies]
reqwest = { version = "0.12.0", features = ["json"] }
derive_more = "0.99.17"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
sha2 = "0.10.8"
chrono="0.4.38"
async-trait = "0.1.80"

[features]
default = []
all-integrations = ["telegram"]
telegram = []

[package.metadata.docs.rs]
features = ["all-integrations"]