[package]
name = "voiceflousion"
version = "0.3.0"
authors = ["Vondert (Ivan Milennyi) <25042018avic@gmail.com>"]
edition = "2021"
description = "A crate that provides toolkit for Voiceflow AI bots integrations and pre-built functionality for quick integration with popular messengers"
license = "MIT"
repository = "https://github.com/Vondert/voiceflousion"
documentation = "https://docs.rs/voiceflousion"
homepage = "https://github.com/Vondert/voiceflousion"
readme = "../README_CARGO.md"
keywords = ["chatbot", "voiceflow", "integration", "framework", "ai"]
categories = ["api-bindings", "web-programming", "asynchronous", "network-programming"]

[dependencies]
reqwest = { version = "0.12.0", features = ["json"] }
derive_more = { version = "1.0.0", features = ["add"] }
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
sha2 = "0.10.8"
chrono="0.4.38"
async-trait = "0.1.80"
axum = { version = "0.7.5", optional = true }
axum-core = { version = "0.4.3", optional = true }
rand = "0.8.5"
hex = { version = "0.4.3", optional = true }
ring = { version = "0.17.8", optional = true }

[features]
default = []
telegram = []
whatsapp = []
discord_unimplemented = ["hex", "ring"]
all-integrations = ["telegram", "whatsapp"]
server = ["axum", "axum-core"]
advanced = []

[package.metadata.docs.rs]
features = ["all-integrations", "advanced", "server"]

[package.metadata]
changelog = "https://github.com/Vondert/voiceflousion/blob/main/CHANGELOG.md"
